--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@hookform/resolvers": "^2.9.11",
-    "@mui/material": "^5.11.11",
+    "@mui/material": "^5.11.12",
     "@mui/styled-engine-sc": "^5.11.11",
     "axios": "^1.3.4",
     "react": "^18.2.0",
