--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.3",
     "react-icons": "^4.8.0",
+    "react-input-mask": "^2.0.4",
     "react-router-dom": "^6.8.2",
     "react-toastify": "^9.1.1",
     "styled-components": "^5.3.8",
@@ -28,6 +29,7 @@
     "@types/axios": "^0.14.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@types/react-input-mask": "^3.0.2",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.26",
     "@vitejs/plugin-react": "^3.1.0",
