--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@hookform/resolvers": "^2.9.11",
     "@mui/material": "^5.11.12",
     "@mui/styled-engine-sc": "^5.11.11",
+    "@types/react-text-mask": "^5.4.11",
     "axios": "^1.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -21,6 +22,7 @@
     "react-icons": "^4.8.0",
     "react-input-mask": "^2.0.4",
     "react-router-dom": "^6.8.2",
+    "react-text-mask": "^5.5.0",
     "react-toastify": "^9.1.1",
     "styled-components": "^5.3.8",
     "yup": "^1.0.2"
